--- a/css/reset.css
+++ b/css/reset.css
@@ -21,6 +21,8 @@ body {
     color: var(--text-primary);
     line-height: 1.5;
     min-height: 100vh;
+    width: 100%;
+    position: relative;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-feature-settings: "kern" 1, "liga" 1, "calt" 1;
